---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - merge
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt merge - Merge worktree into target branch
Usage: [1m[36mwt merge[0m [36m[OPTIONS][0m [36m[TARGET][0m

[1m[32mArguments:[0m
  [36m[TARGET][0m
          Target branch[0m
          [0m
          Defaults to default branch.[0m

[1m[32mOptions:[0m
      [1m[36m--no-squash[0m
          Skip commit squashing

      [1m[36m--no-commit[0m
          Skip commit, squash, and rebase

      [1m[36m--no-remove[0m
          Keep worktree after merge

      [1m[36m--no-verify[0m
          Skip all project hooks

  [1m[36m-f[0m, [1m[36m--force[0m
          Skip approval prompts

      [1m[36m--stage[0m[36m [0m[36m<STAGE>[0m
          What to stage before committing [default: all]

          Possible values:
          - [1m[36mall[0m:     Stage everything: untracked files + unstaged tracked changes
          - [1m[36mtracked[0m: Stage tracked changes only (like [1mgit add -u[0m)
          - [1m[36mnone[0m:    Stage nothing, commit only what's already in the index

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Integrates the current branch into the target branch (default: main) and removes the worktree. All steps — commit, squash, rebase, push, cleanup — run automatically.

[32mExamples[0m

Merge current worktree into main:

  [2mwt merge[0m

Keep the worktree after merging:

  [2mwt merge --no-remove[0m

Preserve commit history (no squash):

  [2mwt merge --no-squash[0m

Skip hooks and approval prompts:

  [2mwt merge --no-verify --force[0m

[32mThe Pipeline[0m

[2mwt merge[0m runs these steps in order:

1. [1mCommit[0m — Stages and commits uncommitted changes with an LLM-generated message. The [2m--stage[0m flag controls what gets staged: [2mall[0m (default), [2mtracked[0m, or [2mnone[0m.

2. [1mSquash[0m — Combines multiple commits into one (like GitHub's "Squash and merge") with an LLM-generated message. The [2m--no-squash[0m flag preserves individual commits. A backup ref is saved to [2mrefs/wt-backup/<branch>[0m.

3. [1mRebase[0m — Rebases onto the target branch. Conflicts abort the merge immediately.

4. [1mPre-merge hooks[0m — Project-defined commands run after rebase. Failures abort the merge.

5. [1mPush[0m — Fast-forward push to the local target branch. Non-fast-forward pushes are rejected.

6. [1mCleanup[0m — Removes the worktree and branch. The [2m--no-remove[0m flag keeps the worktree.

7. [1mPost-merge hooks[0m — Project-defined commands run after cleanup. Failures are logged but don't abort.

[32mHooks[0m

When merging, hooks run in this order:

1. [1mpre-merge[0m — After rebase, before push. Failures abort the merge.
2. [1mpost-merge[0m — After cleanup. Failures are logged but don't abort.

The [2m--no-verify[0m flag skips all hooks. See [Hooks](/hooks/) for configuration details.
